--verbose and --quiet option.

--- a/scripts/gcnmz.in
+++ b/scripts/gcnmz.in
@@ -1,16 +1,21 @@
 #! %PERL% -w
 # -*- Perl -*-
 #
-# $Id: gcnmz.in,v 1.6 2000-02-27 06:30:15 satoru Exp $
+# $Id: gcnmz.in,v 1.7 2000-03-05 17:23:45 furukawa Exp $
 #
 # gcnmz.pl - by furukawa@tcp-ip.or.jp
 #
 
-push(@INC, '../pl');
 push(@INC, '@PERLLIBDIR@');
-
 require 'nmzidx.pl';
 
+use IO::File;
+STDOUT->autoflush(1);
+STDERR->autoflush(1);
+
+my $tim = time();
+my $tintvl = 10;
+my $verbose = 0;
 my $backup = 1;
 
 while (@ARGV && $ARGV[0] =~ s/^\-//){
@@ -18,9 +23,13 @@ while (@ARGV && $ARGV[0] =~ s/^\-//){
 
     &usage, exit if $argv eq '-help';
     $backup = 0, next if $argv eq '-no-backup';
+    $verbose = 1, next if $argv eq '-verbose';
+    $verbose = -1, next if $argv eq '-quiet';
 
     while ($argv =~ s/^(.)//){
         $backup = 0 if $1 eq 'b';
+        $verbose = 1 if $1 eq 'v';
+        $verbose = -1 if $1 eq 'q';
     }
 }
 
@@ -32,6 +41,16 @@ if (@ARGV){
     }
 }else{
     &usage;
+}
+
+sub eprint{
+    print STDERR $_[0] if $verbose >= 0;
+    $tim = time();
+}
+
+sub veprint{
+    print STDERR $_[0] if $verbose > 0;
+    $tim = time();
 }
 
 sub gcnmz{
@@ -48,12 +67,16 @@ sub gcnmz{
     my %list;
     my $nmzfi = $nmzi->open_flist;
     my $nmzfo = $nmzo->open_flist;
+    my $file_total = $nmzfi->{'size'};
+    &eprint("processing NMZ.{t,r,field}\n");
     while (defined $nmzfi->read(\%list)){
-        if ($list{'t'} != -1){
+        if ($list{'t'} == -1){
+            &eprint("$file_num/$file_total ($list{'r'}) deleted\n");
+            $gcflag = 1;
+        }else{
             $table{$file_num} = $nmzfo->{'offset'};
             $nmzfo->write(\%list);
-        }else{
-            $gcflag = 1;
+            &veprint("$file_num/$file_total\n") if time() - $tim >= $tintvl;
         }
         ++$file_num;
     }
@@ -66,6 +89,9 @@ sub gcnmz{
 
         my $nmzwi = $nmzi->open_word;
         my $nmzwo = $nmzo->open_word;
+        my $word_total = $nmzwi->{'size'};
+        my $word_num = 0;
+        &eprint("processing NMZ.{i,w}\n");
         while (defined $nmzwi->read(\$word, \%list_i)){
             my %list_o;
             for my $key (keys %list_i){
@@ -73,13 +99,21 @@ sub gcnmz{
                     $list_o{$table{$key}} = $list_i{$key};
                 }
             }
-            $nmzwo->write($word, \%list_o);
+            if (keys %list_o){
+                $nmzwo->write($word, \%list_o);
+                &veprint("$word_num/$word_total\n") if time() - $tim >= $tintvl;
+            }else{
+                &eprint("$word_num/$word_total ($word) deleted\n");
+            }
+            $word_num++;
         }
         $nmzwi->close;
         $nmzwo->close;
 
         my $nmzpi = $nmzi->open_phrase;
         my $nmzpo = $nmzo->open_phrase;
+        my $phrase_total = $nmzpi->{'size'};
+        &eprint("processing NMZ.p\n");
         for (my $x = 0; $x < 0x10000; $x++){
             my @list_i;
             my @list_o;
@@ -88,6 +122,11 @@ sub gcnmz{
                 if (defined $table{$key}){
                     push(@list_o, $table{$key});
                 }
+            }
+            if (@list_i && !@list_o){
+                &eprint("$x/$phrase_total deleted\n");
+            }elsif (time() - $tim >= $tintvl){
+                &veprint("$x/$phrase_total\n");
             }
             $nmzpo->write(\@list_o);
         }
@@ -112,6 +151,8 @@ sub usage{
     print
         ("Usage: gcnmz [options] <target>...\n" .
          "  --help              show this help and exit.\n" .
-         "  -b, --no-backup     do not backup original file.\n"
+         "  -b, --no-backup     do not backup original file.\n" .
+         "  -v, --verbose       verbose mode.\n" .
+         "  -q, --quiet         quiet mode.\n"
          );
 }
