--- a/scripts/mknmz.in
+++ b/scripts/mknmz.in
@@ -1,7 +1,7 @@
 #! %PERL% -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.in,v 1.42 2000-03-06 10:16:55 rug Exp $
+# $Id: mknmz.in,v 1.43 2000-03-08 14:35:22 kenzo- Exp $
 #
 # Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.
 # Copyright (C) 2000 Namazu Project All rights reserved.
@@ -380,6 +380,8 @@ sub load_filters (@) {
 	die $@ if $@;
 
 	for my $mt (@mtypes) {
+        next if (defined $var::Supported{$mt} && 
+                 $var::Supported{$mt} eq 'yes' && $status eq 'no');
 	    $var::Supported{$mt} = $status;
 	    $var::REQUIRE_ACTIONS{$mt} = $module;
 	    $var::RECURSIVE_ACTIONS{$mt} = $recursive;
