--- a/pl/conf.pl.in
+++ b/pl/conf.pl.in
@@ -28,7 +28,9 @@ $HTML_SUFFIX = "html?|[ps]html|html\\.[a-z]{2}";
 #
 $ALLOW_FILE =	".*\\.(?:$HTML_SUFFIX)|.*\\.txt" . # HTML, plain text
 		"|.*\\.gz|.*\\.Z|.*\\.bz2" .       # Compressed files
-		"|.*\\.pdf|.*\\.doc|.*\\.tex" .    # PDF, Word, TeX
+		"|.*\\.pdf" . 			   # PDF
+		"|.*\\.tex" .   		   # TeX
+		"|.*\\.doc|.*\\.xls" .		   # Word, Excel
 		"|.*\\.j[sab]w" .                  # Ichitaro 4, 5, 6
 		"|\\d+|[-\\w]+\\.[1-9n]";          # Mail/News, man
 
