* configure.in (AC_OUTPUT): Add tests/data/query/Makefile.
	* tests/Makefile.am (TESTS): Add mknmz-6 and namazu-query

	* tests/mknmz-6 (TARGET): New file.

	* tests/namazu-query: New file.

	* tests/data/query/1: New file.

	* tests/data/query/3: New file.

	* tests/data/query/3: New file.

	* tests/data/query/Makefile.am: New file.
	(EXTRA_DIST): Add 1, 2, and 3.

	* tests/Makefile.am (clean-local): Add tmp.*

--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl
 dnl configure for Namazu
-dnl $Id: configure.in,v 1.118 2000-03-08 02:26:26 satoru Exp $
+dnl $Id: configure.in,v 1.119 2000-03-12 05:49:08 satoru Exp $
 dnl
 dnl Created  by Satoru Takabayashi <satoru@isoternet.org> [1998-10-09]
 dnl Modified by SATOH Fumiyasu <fumiya@cij.co.jp> [1998-12-05]
@@ -400,6 +400,7 @@ AC_OUTPUT([Makefile
 	   tests/data/Makefile
 	   tests/data/ja/Makefile
 	   tests/data/en/Makefile
+	   tests/data/query/Makefile
 	  ],
 	  [chmod +x nmz-config \
 		    scripts/bnamazu \
