--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -5,10 +5,8 @@ SUBDIRS = data
 TESTS =	mknmz-1 mknmz-2 mknmz-3 mknmz-4 mknmz-5 mknmz-6 \
 	gcnmz-1 \
 	idxdiff-1 idxdiff-2 idxdiff-3 \
-	namazu-1 namazu-2 namazu-3 namazu-4 \
+	namazu-1 namazu-2 namazu-3 namazu-4 namazu-5 namazu-6 \
 	namazu-cgi-1 namazu-cgi-2 \
-	namazu-query \
-	namazu-nasty-cases
 
 clean-local:
 	rm -rf test-log tmp-data tmp.* idx[0-9]* 
