--- a/pl/conf.pl.in
+++ b/pl/conf.pl.in
@@ -5,28 +5,6 @@ package conf;  # Don't remove this line!
 
 #===================================================================
 #
-# directory where mknmzrc are in.
-#
-# $CONFDIR = "@CONFDIR@";
-
-#
-# directory where library etc. are in.
-#
-# $LIBDIR = "@PERLLIBDIR@";
-
-#
-# directory where filters are in. 
-#
-# $FILTERDIR = "@FILTERDIR@";
-
-#
-# directory where templates are in.
-#
-# $TEMPLATEDIR = "@TEMPLATEDIR@";
-
-
-#===================================================================
-#
 # Administrator's email address
 #
 $ADDRESS = '@OPT_ADMIN_EMAIL@';
@@ -215,6 +193,15 @@ $CHASEN_NOUN = "@CHASEN@ -j -F '\%m %H\\n'";
 # Default Japanese processer: KAKASI or ChaSen.
 #
 $WAKATI  = $@OPT_WAKATI_DEFAULT@;
+
+
+#===================================================================
+#
+# Directories
+#
+# $LIBDIR = "@PERLLIBDIR@";
+# $FILTERDIR = "@FILTERDIR@";
+# $TEMPLATEDIR = "@TEMPLATEDIR@";
 
 1;
 
