--- a/scripts/mknmz.in
+++ b/scripts/mknmz.in
@@ -1,7 +1,7 @@
 #! %PERL% -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.in,v 1.53 2000-03-16 16:12:50 satoru Exp $
+# $Id: mknmz.in,v 1.54 2000-03-17 03:10:29 satoru Exp $
 #
 # Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.
 # Copyright (C) 2000 Namazu Project All rights reserved.
@@ -497,7 +497,9 @@ sub generate_uri (@) {
     if (($SYSTEM eq "MSWin32") || ($SYSTEM eq "os2")) {
 	$file = codeconv::shiftjis_to_eucjp($file);
     }
-    codeconv::toeuc(\$fragment);
+    if (defined $fragment) {
+        codeconv::toeuc(\$fragment);
+    }
 
     unless ($var::Opt{'noencodeuri'}) {
 	for my $tmp ($file, $fragment) {
