* filter/msword.pl (filter): Separate filter_wv and filter_doccat.
        * filter/excel.pl (filter): Separate filter_xl and filter_doccat.

        * filter/Makefile.am: Add ichitaro456.pl, powerpoint.pl and taro.pl.

        * filter/win32/Makefile.am: Remove ichitaro456.pl.

--- a/filter/Makefile.am
+++ b/filter/Makefile.am
@@ -26,6 +26,9 @@ filter_DATA = bzip2.pl \
 	     pdf.pl \
 	     rfc.pl \
 	     tex.pl \
+	     powerpoint.pl \
+	     taro.pl \
+	     ichitaro456.pl \
 	     hnf.pl
 
 EXTRA_DIST = $(filter_DATA)
@@ -36,4 +39,3 @@ TAGS_DEPENDENCIES = $(filter_DATA)
 # To remove Windows specific files installed by Namazu 2.0 and/or 2.0.1
 install-data-local:
 	rm -f $(filterdir)/ole*.pl
-	rm -f $(filterdir)/ichitaro.pl
