* src/form.c (select_option): Fixed selected idxname value         mark selected function.
        * src/cgi.c (get_query_string): Add An httpd server for Win9x.

        * filter/msword.pl (filter_doccat): Fixed multi-byte path.

        * filter/excel.pl (filter_doccat): Likewise.

        * filter/powerpoint.pl (filter): Likewise.

        * filter/ichitaro456.pl (filter): Likewise.

        * filter/taro.pl (filter): Likewise.

        * filter/Makefile.am : Add wordpro.pl, oasys.pl.

        * filter/wordpro.pl : Newfile.

        * filter/oasys.pl : Newfile.

--- a/filter/Makefile.am
+++ b/filter/Makefile.am
@@ -29,6 +29,8 @@ filter_DATA = bzip2.pl \
 	     powerpoint.pl \
 	     taro.pl \
 	     ichitaro456.pl \
+	     wordpro.pl \
+	     oasys.pl \
 	     hnf.pl
 
 EXTRA_DIST = $(filter_DATA)
