--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -6,7 +6,7 @@ TESTS =	mknmz-1 mknmz-2 mknmz-3 mknmz-4 mknmz-5 mknmz-6 mknmz-7 \
 	gcnmz-1 \
 	idxdiff-1 idxdiff-2 idxdiff-3 \
 	namazu-1 namazu-2 namazu-3 namazu-4 namazu-5 namazu-6 namazu-7 \
-	namazu-cgi-1 namazu-cgi-2
+	namazu-cgi-1 namazu-cgi-2 namazu-cgi-3
 
 clean-local:
 	rm -rf test-log tmp-data tmp.* idx[0-9]* 
